main-application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:  
    name: dwk-main-application-svc
spec:
    type: NodePort
    selector:
        app: dwk-main-application
    ports:
        - port: 80
          protocol: TCP
          targetPort: 3000
