main-application/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dwk-main-application-ingress
spec:
    rules:
      - http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: dwk-main-application-svc
                        port:
                            number: 2345
